--- a/css/global.css
+++ b/css/global.css
@@ -2,9 +2,11 @@
 
 html {
 
-    --main-font-color: #111;
+    --main-font-color: #666;
+    --heading-font-color: #111;
     --font-color-faded: #aaa;
     --secondary-color: #ff7a18;
+    --hero-bg-color: #fff9f5;
 
     --spacing-s: 8px;
     --spacing-m: 12px;
@@ -16,6 +18,14 @@ html {
     --font-l: 18px;
     --font-xl: 24px;
     --font-xxl: 33px;
+}
+
+.only-mobile {
+    display: block;
+}
+
+.only-desktop {
+    display: none;
 }
 
 @media (min-width: 960px) {
@@ -31,6 +41,14 @@ html {
         --spacing-l: 32px;
         --spacing-xl: 48px;
     
+    }
+
+    .only-mobile {
+        display: none;
+    }
+    
+    .only-desktop {
+        display: block;
     }
 }
 
@@ -53,6 +71,7 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 140%;
     margin: 0;
     padding: 0;
+    color: #111;
 }
 
 h1 { font-size: var(--font-xxl); }
@@ -78,7 +97,7 @@ p, ul li, ol li, ul, ol {
 }
 
 a {
-    color: var(--main-font-color);
+    color: var(--heading-font-color);
 }
 
 a:hover {
