--- a/css/index.css
+++ b/css/index.css
@@ -386,7 +386,7 @@ li.faded, p.faded {
     font-weight: 700;
 }
 
-.main-container .image-container span, .main-container .p5Embed span, .main-container .embed span, .image-container-small span, .video-container span {
+.main-container .image-container span, .main-container .p5-embed span, .main-container .embed span, .image-container-small span, .video-container span {
     font-size: 16px;
     color: #999;
     text-align: center;
@@ -403,20 +403,20 @@ li.faded, p.faded {
     border: none;
 }
 
-.p5Embed {
+.p5-embed {
     width: 100%;
-    padding-top: 100%;
+    /* padding-top: 100%; */
     position: relative;
     margin-bottom: 20px;
 }
-
-.p5Embed iframe {
+/* 
+.p5-embed iframe {
     width: 100%;
     height: 100%;
     top: 0;
     border: none;
     position: absolute;
-}
+} */
 
 @media (min-width: 960px) {
 
@@ -448,7 +448,18 @@ li.faded, p.faded {
         align-items: center;
     }
 
+    .main-container .p5-embed {
+        width: 960px;
+        height: 300px;
+        margin: auto;
+    }
+
+    .main-container .p5-embed iframe {
+        height: 100%;
+    }
+
     .video-container { width: 700px; margin: 0 auto; position: relative; padding-bottom: 56%; padding-top: 30px; height: 0; overflow: hidden; }
+
     .video-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
     .main-container .image-container-small {
