--- a/css/global.css
+++ b/css/global.css
@@ -4,7 +4,7 @@ html {
 
     --main-font-color: #666;
     --heading-font-color: #111;
-    --font-color-faded: #aaa;
+    --font-color-faded: #666;
     --secondary-color: #ff7a18;
     --hero-bg-color: #fff9f5;
 
