--- a/css/index.css
+++ b/css/index.css
@@ -61,6 +61,7 @@ nav {
 .hero > .image > img {
     aspect-ratio: 1 / 1;
     display: block;
+    background-color: #f5f5f5;
 }
 
 .hero > .image > span {
